--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <h1>Add book</h1>
+    <h1>Add extra book</h1>
     <form method="POST" action="/">
       <input type="text" name="title">
       <input type="submit" value="Add">
